--- a/assets/src/app/committee/templates/discussion.tpl.html
+++ b/assets/src/app/committee/templates/discussion.tpl.html
@@ -58,7 +58,7 @@
                 <div class="pull-left">
                     <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
                     <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
-                    <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
+                    <a href="post/{{post.id}}" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
                 </div>
                 <div class="pull-right">
                     <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
