--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -1,15 +1,3 @@
-<style>
-.verticalRow{
-	display: flex;
-    align-items: center;
-}
-@media (max-width: 767px) {
-    .verticalRow {
-        display: block;
-    }
-}
-</style>
-
 <div class="imageContainer">
 	<video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4" playsinline></video>
 	<div class="imageContainerDiv container">  
@@ -21,8 +9,8 @@
 		<div class="container">
 			<h2>directly impact the political landscape</h2>
 			<br>
-			<h4>build empowerment though creating constituent coalitions.</h4>
-			<h4>change consensus though direct input on policy decisions.</h4>
+			<h4>build empowerment by creating constituent coalitions</h4>
+			<h4>change consensus though direct input on policy decisions</h4>
 		</div>
 	</div>
 	<div id="section2">
