--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -1,3 +1,9 @@
+<style>
+#section3{
+	color:white;
+	background-color: #2ab996;
+}
+</style>
 <div class="imageContainer">
 	<video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4" playsinline></video>
 	<div class="imageContainerDiv container">  
