--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -7,7 +7,8 @@
 <div class="imageContainer">
 	<video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4" playsinline></video>
 	<div class="imageContainerDiv container">  
-		<h1>build empowerment, change consensus</h1>
+		<!--<h1>build empowerment, change consensus</h1>-->
+		<h1>build coalitions, create impact</h1>
 	</div>
 </div>
 <div class="about-container">
