--- a/.tmp/public/src/app/bill/index.tpl.html
+++ b/.tmp/public/src/app/bill/index.tpl.html
@@ -68,9 +68,9 @@
 			    <md-card ng-show="currentUser">
 			        <div class="card-container">
 			            <div class="post-controller-container">
-			                <a href="/member/{{user.username}}">
-			                    <img class="post-img" ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
-			                    <h4 class="post-name">{{user.username}}</h4>
+			                <a href="/member/{{currentUser.username}}">
+			                    <img class="post-img" ng-src="{{currentUser.avatarUrl}}" class="md-card-image" alt="{{currentUser.username}}">
+			                    <h4 class="post-name">{{currentUser.username}}</h4>
 			                </a>
 			            </div>
 			            <div style="margin-left:61px;">
@@ -147,9 +147,9 @@
 			    <md-card ng-show="currentUser">
 			        <div class="card-container">
 			            <div class="post-controller-container">
-			                <a href="/member/{{user.username}}">
-			                    <img class="post-img" ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
-			                    <h4 class="post-name">{{user.username}}</h4>
+			                <a href="/member/{{currentUser.username}}">
+			                    <img class="post-img" ng-src="{{currentUser.avatarUrl}}" class="md-card-image" alt="{{currentUser.username}}">
+			                    <h4 class="post-name">{{currentUser.username}}</h4>
 			                </a>
 			            </div>
 			            <div style="margin-left:61px;">
