--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -18,12 +18,12 @@
 			<div class="pull-right member-tab-container">
 				<ul class="member-tabs">
 					<li><a href="member/{{member.username}}">Activity</a></li>
-					<li ng-show="billCount"><a href="member/{{member.username}}/bills">{{billCount}} Bill<span ng-show="committee.memberCount!=1">s</span></a></li>
-					<li><a href="member/{{member.username}}/committees">{{committeeCount}} Committee<span ng-show="committeeCount!=1">s</span></a></li>
-					<li><a href="member/{{member.username}}/constituents">{{constituentCount}} Constituent<span ng-show="constituentCount!=1">s</span></a></li>
+					<li ng-show="false"><a href="member/{{member.username}}/bills">{{member.billCount}} Bill<span ng-show="member.billCount!=1">s</span></a></li>
+					<li><a href="member/{{member.username}}/committees">{{member.committeeCount}} Committee<span ng-show="member.committeeCount!=1">s</span></a></li>
+					<li><a href="member/{{member.username}}/constituents">{{member.constituentCount}} Constituent<span ng-show="member.constituentCount!=1">s</span></a></li>
 					<!--<li><a href="member/{{member.username}}/posts">{{postCount}} Post<span ng-show="voteCount>=!1">s</span></a></li>-->
-					<li><a href="member/{{member.username}}/representatives">{{representativeCount}} Representative<span ng-show="representativeCount!=1">s</span></a></li>
-					<li><a href="member/{{member.username}}/votes">{{voteCount}} Vote<span ng-show="voteCount>=!1">s</span></a></li>
+					<li><a href="member/{{member.username}}/representatives">{{member.representativeCount}} Representative<span ng-show="member.representativeCount!=1">s</span></a></li>
+					<li><a href="member/{{member.username}}/votes">{{member.voteCount}} Vote<span ng-show="member.voteCount!=1">s</span></a></li>
 					<li ng-show="currentUser.id != member.id">
 						<a ng-show="!isFollowing" class="btn btn-default" ng-click="selectAsRepresentative()">Elect</a>
 						<a ng-show="isFollowing" class="btn btn-default" ng-click="removeRepresentative()">Unelect</a>
