--- a/assets/src/app/committee/templates/activity.tpl.html
+++ b/assets/src/app/committee/templates/activity.tpl.html
@@ -78,14 +78,16 @@
 
         </div>
     </md-card>
-    <md-card ng-repeat="bill in bills | orderBy:'-voteCount'">
+    <md-card ng-repeat="committeeBill in bills">
         <div style="padding:16px 16px 16px">
             <div>
                 <h4>
                     <!--{{bill.voteCount}}
                     <button class="btn btn-default" ng-click="createVote(1, bill)"><i class="fa fa-caret-up"></i></button>
                     <button class="btn btn-default" ng-click="createVote(-1, bill)"><i class="fa fa-caret-down"></i></button>-->
-                    <a href="/bill/{{bill._id}}/{{bill.title}}">{{bill.title}}</a>
+                    <a href="/bill/{{committeeBill.bill.id}}/{{committeeBill.bill.title}}">{{committeeBill.bill.title}}</a>
+                    <br>
+                    <a href="committee/{{committeeBill.committee.urlTitle}}">{{committeeBill.committee.title}}</a>
                 </h4>
 
                 <div>
