--- a/assets/src/app/committee/index.tpl.html
+++ b/assets/src/app/committee/index.tpl.html
@@ -7,11 +7,11 @@
 <div class="member-tab-container container">
 	<ul style="padding:0px;" class="member-tabs">
 		<li><a href="/committee/{{committee.urlTitle}}">Activity</a></li>
-		<li><a href="/committee/{{committee.urlTitle}}/bills">{{billCount}} Bills</a></li>
+		<li><a href="/committee/{{committee.urlTitle}}/bills">{{committee.billCount}} Bills</a></li>
 		<li><a href="/committee/{{committee.urlTitle}}/committees">Committees</a></li>
 		<li><a href="/committee/{{committee.urlTitle}}/discussion">Discussion</a></li>
 		<li><a href="/committee/{{committee.urlTitle}}/members">{{committee.memberCount}} Member<span ng-show="committee.memberCount!=1">s</span></a></li>
-		<li><a href="/committee/{{committee.urlTitle}}/votes">{{voteCount}} Votes</a></li>
+		<li><a href="/committee/{{committee.urlTitle}}/votes">{{committee.voteCount}} Votes</a></li>
 		<!--<li ng-show="currentUser">
 			<a class="btn btn-default" ng-click="toggleEditCommittee()">Edit</a>
 		</li>-->
