--- a/assets/src/app/member/templates/committees.tpl.html
+++ b/assets/src/app/member/templates/committees.tpl.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h3 ng-show="committees.length == 0">nothing to see here!</h3>
     <md-card ng-repeat="committee in committees">
         <md-card-title>
             <md-card-title-text>
