--- a/assets/src/app/member/templates/activity.tpl.html
+++ b/assets/src/app/member/templates/activity.tpl.html
@@ -24,14 +24,17 @@
                     <md-input-container class="md-block">
                         <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder="what's happening"></textarea>
                     </md-input-container>
-                    <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-paper"></i> send fax, send email </button>
-                    <button ng-click="createPost()" type="submit" class="btn btn-default"><i class="fa fa-check"></i> Button 2</button>
-                    <button ng-click="createPost()" type="submit" class="btn btn-default pull-right"><i class="fa fa-paper-plane"></i> Submit</button>
+                    <div ng-show="false">
+                        <button ng-click="" type="submit" class="btn btn-default"><i class="fa fa-envelope"></i> email</button>
+                        <button ng-click="" type="submit" class="btn btn-default"><i class="fa fa-fax"></i> fax</button>
+                        <!--need to be verified to send a physical letter-->
+                        <button ng-click="" type="submit" class="btn btn-default"><i class="fa fa-picture-o"></i> letter</button>
+                    </div>
+                    <button ng-click="" type="submit" class="btn btn-default pull-right"><i class="fa fa-paper-plane"></i> Submit</button>
                 </form>
             </div>
         </div>
     </md-card>
-
 
 
 	<div class="spacing-25"></div>
