--- a/assets/src/app/member/templates/constituents.tpl.html
+++ b/assets/src/app/member/templates/constituents.tpl.html
@@ -1,4 +1,5 @@
 <div class="container">
+	<h3 ng-show="constituents.length == 0">{{member.username}} does not yet have any constituents</h3>
 	<div class="col-lg-4 col-sm-6" ng-repeat="constituent in constituents">
 		<div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
 			<div class="image" style="background-image: url('{{constituent.constituent.coverUrl}}')">
