--- a/assets/src/app/member/templates/representatives.tpl.html
+++ b/assets/src/app/member/templates/representatives.tpl.html
@@ -1,4 +1,5 @@
 <div class="container">
+	<h3 ng-show="representatives.length == 0">{{member.username}} is not currently represented</h3>
 	<div class="col-lg-4 col-sm-6" ng-repeat="representative in representatives">
 		<div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
 			<div class="image" style="background-image: url('{{representative.representative.coverUrl}}')">
