--- a/assets/src/app/post/index.tpl.html
+++ b/assets/src/app/post/index.tpl.html
@@ -9,18 +9,13 @@
                 </a>
                 <div class="pull-right">
                     <span class="grey" am-time-ago="post.updatedAt"></span>
-                    <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
-                    <!--
-                    <div class="btn-group" uib-dropdown is-open="status.isopen">
-                      <button uib-dropdown-toggle ng-disabled="disabled">
-                        <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
-                      </button>
-                      <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                        <li role="menuitem"><a href="#">Share</a></li>
-                        <li role="menuitem"><a href="#">Delete</a></li>
-                      </ul>
-                    </div>
-                    -->
+                    <!--<div style="display:inline" uib-dropdown is-open="status.isopen">
+                        <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
+                        <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                            <li role="menuitem"><a href="#">Share</a></li>
+                            <li role="menuitem"><a href="#">Delete</a></li>
+                        </ul>
+                    </div>-->
                 </div>
             </div>
 
@@ -38,8 +33,8 @@
 
             <div class="post-action-container">
                 <div class="pull-left">
-                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                    <a href="#" ng-click="createVote(post)" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
+                    <a href="#" ng-click="createVote(post)" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
                     <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
                 </div>
                 <div class="pull-right">
@@ -56,6 +51,18 @@
                 </form>
             </div>
 
+            <!--
+            <md-card>
+            <div style="margin-left:61px;" ng-hide="post.showReply">
+                <a href="/member/{{post.user.username}}">
+                    <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+                    <h4 class="post-name">{{post.user.username}}</h4>
+                </a>
+                <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder="write a comment..."></textarea>
+                <button ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+            </div>
+            </md-card>
+            -->
 
 
             <md-card ng-repeat="post in postChildren">
@@ -70,17 +77,6 @@
                         <div class="pull-right">
                             <span class="grey" am-time-ago="post.updatedAt"></span>
                             <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a>
-                            <!--
-                            <div class="btn-group" uib-dropdown is-open="status.isopen">
-                              <button uib-dropdown-toggle ng-disabled="disabled">
-                                <a href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
-                              </button>
-                              <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                                <li role="menuitem"><a href="#">Share</a></li>
-                                <li role="menuitem"><a href="#">Delete</a></li>
-                              </ul>
-                            </div>
-                            -->
                         </div>
                     </div>
 
@@ -158,15 +154,10 @@
                         </div>
                     </md-card>-->
 
-
                     <div ng-include="'post/post.tpl.html'" ng-repeat="post in post.children"></div>
-
 
                 </div>
             </md-card>
-
-
-
 
         </div>
     </md-card>
