--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -106,6 +106,7 @@
         <script src="/src/common/models/follower.js"></script>
         <script src="/src/common/models/index.js"></script>
         <script src="/src/common/models/post.js"></script>
+        <script src="/src/common/models/reaction.js"></script>
         <script src="/src/common/models/representative.js"></script>
         <script src="/src/common/models/search.js"></script>
         <script src="/src/common/models/user.js"></script>
