--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -71,7 +71,7 @@
                         
                         <a ng-show="post.vote" href="vote/{{post.vote.id}}"><h4>{{post.vote.title}}</h4></a>
                         <div class="pull-right">
-                            <span class="grey" am-time-ago="post.updatedAt"></span>
+                            <span class="grey" am-time-ago="post.createdAt"></span>
                             <div style="display:inline" uib-dropdown is-open="status.isopen">
                                 <a uib-dropdown-toggle ng-disabled="disabled" href="#" ng-click=""><i class="fa fa-angle-down grey"></i></a> 
                                 <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu role="menu" aria-labelledby="single-button">
