--- a/assets/src/app/bills/index.tpl.html
+++ b/assets/src/app/bills/index.tpl.html
@@ -24,8 +24,8 @@
             <h4><a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a></h4>
             <div class="post-action-container">
                 <div class="pull-left">
-                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+                    <a href="#" ng-click="createReaction(bill, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{bill.plusCount}} like </a> 
+                    <a href="#" ng-click="createReaction(bill, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{bill.minusCount}} dislike </a> 
                     <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
                 </div>
             </div>
