--- a/.tmp/public/src/app/search/index.tpl.html
+++ b/.tmp/public/src/app/search/index.tpl.html
@@ -68,8 +68,8 @@
 
 		                    <div class="post-action-container">
 		                        <div class="pull-left">
-		                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-		                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+		                            <a href="#" ng-click="createReaction(result, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
+		                            <a href="#" ng-click="createReaction(result, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
 		                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
 		                        </div>
 		                        <div class="pull-right">
@@ -137,8 +137,8 @@
 
 			                    <div class="post-action-container">
 			                        <div class="pull-left">
-			                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-			                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+			                            <a href="#" ng-click="createReaction(result, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
+			                            <a href="#" ng-click="createReaction(result, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
 			                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
 			                        </div>
 			                        <div class="pull-right">
@@ -154,8 +154,8 @@
 
 				            	<div class="post-action-container">
 			                        <div class="pull-left">
-			                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-			                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+			                            <a href="#" ng-click="createReaction(result, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
+			                            <a href="#" ng-click="createReaction(result, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
 			                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
 			                        </div>
 			                    </div>
@@ -204,8 +204,8 @@
 
 							<div class="post-action-container">
 		                        <div class="pull-left">
-		                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-		                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+		                            <a href="#" ng-click="createReaction(bill, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
+		                            <a href="#" ng-click="createReaction(bill, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
 		                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
 		                        </div>
 		                    </div>
@@ -365,8 +365,8 @@
 
 	                    <div class="post-action-container">
 	                        <div class="pull-left">
-	                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-	                            <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
+	                            <a href="#" ng-click="createReaction(result, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
+	                            <a href="#" ng-click="createReaction(result, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
 	                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
 	                        </div>
 	                        <div class="pull-right">
