--- a/assets/src/app/home/templates/feed.tpl.html
+++ b/assets/src/app/home/templates/feed.tpl.html
@@ -37,12 +37,12 @@
                             <h4 class="post-name">{{user.username}}</h4>
                         </a>
                     </div>
-                    <div style="margin-left:61px;">
+                    <div style="">
                         <form role="form">
                             <md-input-container class="md-block">
                                 <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder="what's happening"></textarea>
                             </md-input-container>
-                            <button ng-click="createPost()" type="submit" class="btn btn-default pull-right"><i class="fa fa-paper-plane"></i> Submit</button>
+                            <button style="width:100%" ng-click="createPost()" type="submit" class="btn btn-default pull-right"><i class="fa fa-paper-plane"></i> Submit</button>
                         </form>
                     </div>
                 </div>
@@ -60,16 +60,13 @@
                                 {{post.user.username}}
                             </h4>
                         </a>
-
-
-                        <!--
-                        <a ng-show="post.bill" href="bill/{{post.bill.id}}/1"><h4>{{post.bill.title}}</h4></a>
-                        <a ng-show="post.committee" href="committee/{{post.committee.urlTitle}}"><h4>{{post.committee.title}}</h4></a>
-                        <a ng-show="post.profile && post.profile.id != post.user.id" href="member/{{post.profile.username}}"><h4>{{post.profile.username}}</h4></a>
-                        -->
-
-                        
+                        <i ng-show="post.bill || post.committee || (post.profile && post.profile.id != post.user.id)" class="post-name fa fa-caret-right"></i>
+                        <a class="post-name" ng-show="post.bill" href="bill/{{post.bill.id}}/1"><h4>{{post.bill.title}}</h4></a>
+                        <a class="post-name" ng-show="post.committee" href="committee/{{post.committee.urlTitle}}"><h4>{{post.committee.title}}</h4></a>
+                        <a class="post-name" ng-show="post.profile && post.profile.id != post.user.id" href="member/{{post.profile.username}}"><h4>{{post.profile.username}}</h4></a>
                         <a ng-show="post.vote" href="vote/{{post.vote.id}}"><h4>{{post.vote.title}}</h4></a>
+                        <!--<span class="grey" am-time-ago="post.createdAt"></span>-->
+
                         <div class="pull-right">
                             <span class="grey" am-time-ago="post.createdAt"></span>
                             <div style="display:inline" uib-dropdown is-open="status.isopen">
@@ -83,35 +80,26 @@
                     </div>
 
                     <div class="post-container">
-                        <a ng-show="post.bill" href="bill/{{post.bill.id}}/1"><h4>{{post.bill.title}}</h4></a>
-                        <a ng-show="post.committee" href="committee/{{post.committee.urlTitle}}"><h4>{{post.committee.title}}</h4></a>
-                        <a ng-show="post.profile && post.profile.id != post.user.id" href="member/{{post.profile.username}}"><h4>{{post.profile.username}}</h4></a>
                         <p>{{post.post}}</p>
                     </div>
 
-                    <div class="post-action-container">
-                        <div class="pull-left">
-                            <a href="#" ng-click="createReaction(post, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
-                            <a href="#" ng-click="createReaction(post, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
-                            <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
-                            <a href="#" class="grey"><i class="fa fa-share"></i> share </a>
-                        </div>
-
-                        <div class="pull-right">
-                            <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
-                        </div>
-                    </div>
-
-                    <div style="margin-left:61px;" ng-show="post.showReply">
-                        <form role="form">
-                            <md-input-container class="md-block">
-                                <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
-                            </md-input-container>
-                            <button ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
-                        </form>
-                    </div>
-
                 </div>
+                <div class="" style="padding: 8px 16px 8px;background-color: #f9f9f9">
+                    <a style="padding:5px" href="#" ng-click="createReaction(post, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
+                    <a style="padding:5px" href="#" ng-click="createReaction(post, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
+                    <a style="padding:5px" href="#" class="grey" ng-click="reply(post)"><i class="fa fa-comment-o"></i> comment </a>
+                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
+                    <a style="" class="pull-right" href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+                </div>
+                <div style="background-color: #f9f9f9;padding: 8px 16px 16px;" ng-show="post.showReply">
+                    <form role="form">
+                        <md-input-container class="md-block">
+                            <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                        </md-input-container>
+                        <button style="width:100%" ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+                    </form>
+                </div>
+
             </md-card>
 
 
