--- a/.tmp/public/src/app/bill/index.tpl.html
+++ b/.tmp/public/src/app/bill/index.tpl.html
@@ -171,6 +171,7 @@
 	                        <a href="/member/{{post.user.username}}">
 	                            <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
 	                            <h4 class="post-name">{{post.user.username}}</h4>
+	                            <p> reaction to bill</p>
 	                        </a>
 	                        <div class="pull-right">
 	                            <span class="grey" am-time-ago="post.updatedAt"></span>
