--- a/assets/src/app/committee/templates/activity.tpl.html
+++ b/assets/src/app/committee/templates/activity.tpl.html
@@ -54,57 +54,44 @@
             <div class="post-container">
                 <p>{{post.post}}</p>
             </div>
-
-            <div class="post-action-container">
-                <div class="pull-left">
-                    <a href="#" ng-click="createReaction(post, 'like', 'post')" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
-                    <a href="#" ng-click="createReaction(post, 'like', 'post')" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
-                    <a href="#" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
-                </div>
-                <div class="pull-right">
-                    <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
-                </div>
-            </div>
-
-             <!--
-            <div class="profilePost">
-                <form role="form">
-                    <md-input-container class="md-block">
-                        <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
-                    </md-input-container>
-                </form>
-            </div>
-            -->
-
+        </div>
+        <div class="" style="padding: 8px 16px 8px;background-color: #f9f9f9">
+            <a style="padding:5px" href="#" ng-click="createReaction(post, 'like', 'post')" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
+            <a style="padding:5px" href="#" ng-click="createReaction(post, 'dislike', 'post')" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
+            <a style="padding:5px" href="#" class="grey" ng-click="reply(post)"><i class="fa fa-comment-o"></i> comment </a>
+            <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
+            <a style="" class="pull-right" href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+        </div>
+        <div style="background-color: #f9f9f9;padding: 8px 16px 16px;" ng-show="fasle">
+            <form role="form">
+                <md-input-container class="md-block">
+                    <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                </md-input-container>
+                <button style="width:100%" ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+            </form>
         </div>
     </md-card>
     <md-card ng-repeat="committeeBill in bills">
         <div class="card-container">
             <div>
-                <h4>
-                    <!--{{bill.voteCount}}
-                    <button class="btn btn-default" ng-click="createVote(1, bill)"><i class="fa fa-caret-up"></i></button>
-                    <button class="btn btn-default" ng-click="createVote(-1, bill)"><i class="fa fa-caret-down"></i></button>-->
-                    <a href="/bill/{{committeeBill.bill.id}}/{{committeeBill.bill.title}}">{{committeeBill.bill.title}}</a>
-                    <br>
-                    <a href="committee/{{committeeBill.committee.urlTitle}}">{{committeeBill.committee.title}}</a>
-                </h4>
-
-                <div>
-                    <div class="pull-left">
-                        <a href="#" ng-click="createReaction(committeeBill, 'like', 'bill')" class="grey"><i class="fa fa-angle-up"></i> {{committeeBill.plusCount}} like </a> 
-                        <a href="#" ng-click="createReaction(committeeBill, 'like', 'bill')" class="grey"><i class="fa fa-angle-down"></i> {{committeeBill.plusCount}} dislike </a> 
-                        <a href="bill/{{committeeBill.bill.id}}/{{committeeBill.bill.title}}" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
-                    </div>
-                    <div class="pull-right">
-                        <a href="bill/{{committeeBill.bill.id}}/{{committeeBill.bill.title}}"><i class="fa fa-link grey"></i></a>
-                    </div>
-                </div>
-
+                <h4><i class="fa fa-file-text-o"></i><a href="bill/{{committeeBill.bill.id}}/{{committeeBill.bill.title}}"> {{committeeBill.bill.title}}</a></h4>
+                <!--<h4><a href="committee/{{committeeBill.committee.urlTitle}}">{{committeeBill.committee.title}}</a></h4>-->
+                <span class="grey" am-time-ago="committeeBill.updatedAt"></span>
             </div>
-            <!--<div>
-                <a href="/bill/{{bill._id}}/{{bill.title}}">{{bill.posts.length}} posts, {{bill.votes.length}} votes</a>
-            </div>-->
+        </div>
+        <div class="" style="padding: 8px 16px 8px;background-color: #f9f9f9">
+            <a style="padding:5px" href="#" ng-click="createReaction(committeeBill, 'like', 'bill')" class="grey"><i class="fa fa-angle-up"></i> {{committeeBill.plusCount}} like </a> 
+            <a style="padding:5px" href="#" ng-click="createReaction(committeeBill, 'dislike', 'bill')" class="grey"><i class="fa fa-angle-down"></i> {{committeeBill.minusCount}} dislike </a> 
+            <a style="padding:5px" href="bill/{{committeeBill.bill.id}}/{{committeeBill.bill.title}}" class="grey" ng-click="reply(post)"><i class="fa fa-comments-o"></i> comments </a>
+            <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
+        </div>
+        <div style="background-color: #f9f9f9;padding: 8px 16px 16px;" ng-show="fasle">
+            <form role="form">
+                <md-input-container class="md-block">
+                    <textarea ng-model="committeeBill.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                </md-input-container>
+                <button style="width:100%" ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+            </form>
         </div>
     </md-card>
 </div>
