--- a/assets/src/app/committee/templates/committees.tpl.html
+++ b/assets/src/app/committee/templates/committees.tpl.html
@@ -6,7 +6,7 @@
         <md-card-title>
             <md-card-title-text>
                 <a href="/committee/{{committee.urlTitle}}/"><h3>{{committee.title}}</h3></a>
-                <h5>{{committee.memberCount}} members</h5>
+                <h5 class="grey">{{committee.memberCount}} members</h5>
             </md-card-title-text>
         <md-card-title>
     </md-card>
