--- a/assets/src/app/committee/templates/discussion.tpl.html
+++ b/assets/src/app/committee/templates/discussion.tpl.html
@@ -32,7 +32,6 @@
 
     <md-card ng-repeat="post in posts">
         <div style="padding:16px 16px 16px">
-
             <div>
                 <a href="/member/{{post.user.username}}">
                     <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
@@ -49,32 +48,24 @@
                     </div>
                 </div>
             </div>
-
             <div class="post-container">
                 <p>{{post.post}}</p>
             </div>
-
-            <div class="post-action-container">
-                <div class="pull-left">
-                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-up"></i> 0 like </a> 
-                    <a href="#" ng-click="" class="grey"><i class="fa fa-angle-down"></i> 0 dislike </a> 
-                    <a href="post/{{post.id}}" class="grey" ng-click="reply(post)"><i class="fa fa-reply"></i> reply </a>
-                </div>
-                <div class="pull-right">
-                    <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
-                </div>
-            </div>
-
-             <!--
-            <div class="profilePost">
-                <form role="form">
-                    <md-input-container class="md-block">
-                        <textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
-                    </md-input-container>
-                </form>
-            </div>
-            -->
-
+        </div>
+        <div class="" style="padding: 8px 16px 8px;background-color: #f9f9f9">
+            <a style="padding:5px" href="#" ng-click="createReaction(post, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
+            <a style="padding:5px" href="#" ng-click="createReaction(post, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
+            <a style="padding:5px" href="#" class="grey" ng-click="reply(post)"><i class="fa fa-comment-o"></i> comment </a>
+            <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
+            <a style="" class="pull-right" href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+        </div>
+        <div style="background-color: #f9f9f9;padding: 8px 16px 16px;" ng-show="fasle">
+            <form role="form">
+                <md-input-container class="md-block">
+                    <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+                </md-input-container>
+                <button style="width:100%" ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+            </form>
         </div>
     </md-card>
 </div>
