--- a/assets/src/app/votevote/index.tpl.html
+++ b/assets/src/app/votevote/index.tpl.html
@@ -1,69 +1,27 @@
-<div ui-view="bill">
-	<div class="container">
+<div ui-view="vote">
+	<div class="voteContainer container">
+		<div class="spacing-5"></div>
+		<h3>{{vote.title}}</h3>
+		<h5><a href="bill/{{vote.bill.id}}/{{vote.bill.urlTitle}}">{{vote.bill.title}}</a></h5>
 		<div class="spacing-10"></div>
-		<h4>{{bill.title}}</h4>
-		<div ng-repeat="committeeBill in committees">
-			<p><a href="committee/{{committeeBill.committee.urlTitle}}" class="grey">{{committeeBill.committee.title}}</a></p>
-		</div>
-		<!--<div class="row">
+		<div class="row">
 			<button class="col-xs-6 btn btn-default upVote" ng-click="createVote(1)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
         	<button class="col-xs-6 btn btn-default downVote" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
     	</div>
-    	<div class="spacing-10"></div>-->
+    	<br>
 		<uib-tabset>
-			<uib-tab heading="Info" active="active">
-			    <div class="spacing-10"></div>
-				<div class="col-lg-4 col-sm-6">
-					<div class="member-card">
-						<div class="image" style="background-image: url('{{bill.user.coverUrl}}')">
-							<a href="member/{{bill.user.username}}"><img ng-src="{{bill.user.avatarUrl}}" err-src="/images/avatar.png"></a>
-						</div>
-						<div class="info">
-                        	<h4 class="name"><a href="member/{{bill.user.username}}">{{bill.user.username}}</a></h4>
-                			<h5 class="position">{{bill.user.title || 'voetr member'}}</h5>
-							<p>{{bill.user.state}}</p>
-						</div>
-						<div class="social">
-							<a ng-show="bill.user.socialAccounts.facebook.profileUrl" href="{{bill.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook facebook-icon"></i></a>
-							<a ng-show="bill.user.socialAccounts.twitter.profileUrl" href="{{bill.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter twitter-icon"></i></a>
-							<a ng-show="bill.user.socialAccounts.google.profileUrl" href="{{bill.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google google-icon"></i></a>
-						</div>
-					</div>
-					<h5 ng-show="false"><a href="#">and 8 cosponsors</a></h5>
-					<md-subheader ng-bind="bill.createdAt | date:'MM/dd/yyyy h:mma'" class="md-no-sticky"></md-subheader><br>
-					<h4 ng-show="bill.congressGovUrl"><a href="{{bill.congressGovUrl}}">congress.gov link</a></h4>
-				</div>
-				<div class="col-sm-8">
-					<p>{{bill.billContent.current_status_description}}</p>
-					<p>{{bill.billContent.current_status_label}}</p>
-					<div ng-show="bill.summary">
-						<h4>Summary</h4>
-						<p style="color:rgb(100,100,100)">{{bill.summary}}</p>
-					</div>
-					<div ng-bind-html="billContent"></div>
-					<h4 ng-show="!billContent">Bill Text not currently available</h4>
-				</div>
-		    </uib-tab>
-		    <uib-tab heading="Activity">
+			<uib-tab heading="Activity" active="active">
+				<div class="spacing-10"></div>
 
-		    	{{actions}}
+
 				<div ng-show="!currentUser" class="profilePost">
 					<form role="form">
 						<md-input-container class="md-block">
-							<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
+							<textarea placeholder="What's up?" ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
 						</md-input-container>
 						<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
 					</form>
 		        </div>
-
-				<!--<div ng-show="!currentUser" class="profilePost">
-			        <form role="form">
-			            <md-input-container class="md-block">
-			                <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
-			            </md-input-container>
-			            <button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
-			        </form>
-			    </div>-->
 
 			    <md-card ng-show="currentUser">
 			        <div class="card-container">
@@ -84,9 +42,14 @@
 			        </div>
 			    </md-card>
 
+				<!--
+				<md-card ng-repeat="result in results">
+					{{result}}
+			    </md-card>
+				-->
 
 		        <md-card ng-repeat="post in posts">
-		        	<div class="card-container">
+					<div class="card-container">
 
 						<div class="post-controller-container">
 	                        <a href="/member/{{post.user.username}}">
@@ -123,33 +86,26 @@
 					</div>
 		        </md-card>
 
-
 		    </uib-tab>
 			<uib-tab heading="Discussion">
+				<div class="spacing-10"></div>
+
+
 				<div ng-show="!currentUser" class="profilePost">
 					<form role="form">
 						<md-input-container class="md-block">
-							<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
+							<textarea placeholder="What's up?" ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
 						</md-input-container>
 						<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
 					</form>
 		        </div>
 
-				<!--<div ng-show="!currentUser" class="profilePost">
-			        <form role="form">
-			            <md-input-container class="md-block">
-			                <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
-			            </md-input-container>
-			            <button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
-			        </form>
-			    </div>-->
-
 			    <md-card ng-show="currentUser">
 			        <div class="card-container">
 			            <div class="post-controller-container">
-			                <a href="/member/{{currentUser.username}}">
-			                    <img class="post-img" ng-src="{{currentUser.avatarUrl}}" class="md-card-image" alt="{{currentUser.username}}">
-			                    <h4 class="post-name">{{currentUser.username}}</h4>
+			                <a href="/member/{{user.username}}">
+			                    <img class="post-img" ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
+			                    <h4 class="post-name">{{user.username}}</h4>
 			                </a>
 			            </div>
 			            <div style="margin-left:61px;">
@@ -164,14 +120,14 @@
 			    </md-card>
 
 
-		        <md-card ng-repeat="post in posts">
 
-			        <div class="card-container">
-				        <div class="post-controller-container">
+		        <md-card ng-repeat="post in posts">
+					<div class="card-container">
+
+						<div class="post-controller-container">
 	                        <a href="/member/{{post.user.username}}">
 	                            <img class="post-img" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
 	                            <h4 class="post-name">{{post.user.username}}</h4>
-	                            <p> reaction to bill</p>
 	                        </a>
 	                        <div class="pull-right">
 	                            <span class="grey" am-time-ago="post.updatedAt"></span>
@@ -199,44 +155,57 @@
 	                            <a href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
 	                        </div>
 	                    </div>
-                	</div>
 
+					</div>
 		        </md-card>
 		    </uib-tab>
-		    <uib-tab heading="Votes" ng-show="votes.length > 0">
-	    		<!--<div ng-show="currentUser">
-					<form role="form">
-						<md-input-container class="md-block">
-							<textarea ng-model="newVote.title" rows="5" md-select-on-focus aria-label="newVote"></textarea>
-						</md-input-container>
-						<button type="submit" ng-click="" class="btn btn-default">Submit</button>
-					</form>
-				</div>-->
-				<div class="voteContainer" ng-show="votes.length==0">
-					<h2>no votes yet</h2>
-				</div>
-			    <div class="voteContainer" ng-show="votes.length!=0">
-					<md-card ng-repeat="vote in bill.votes">
-				        <div style="padding:16px 16px 16px">
-							<h4><a href="/vote/{{vote.id}}">{{vote.result}}: {{vote.title}}</a></h4>
-							<div class="spacing-10"></div>
-							<button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)">
-								<i class="fa fa-caret-up vBlue"></i> <b>{{vote.plusCount}}</b>
-							</button>
-							<button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)">
-								<i class="fa fa-caret-down red-color"></i>  <b>{{vote.minusCount}}</b>
-							</button>
-						</div>
-					</md-card>
-				</div>
+			<uib-tab heading="{{vote.plusCount}}  Yes" active="active">
+				<div class="spacing-10"></div>
+				<div class="col-lg-4 col-sm-6" ng-repeat="vote in yesVotes">
+	                <div class="member-card">
+	                    <div class="image" style="background-image: url('{{vote.user.coverUrl}}')">
+	                        <img ng-src="{{vote.user.avatarUrl}}" err-src="/images/avatar.png">
+	                    </div>
+	                    <div class="info">
+	                        <h4 class="name"><a href="member/{{vote.user.username}}">{{vote.user.username}}</a></h4>
+	                        <h5 class="position">{{vote.user.title}}</h5>
+	                        <p ng-show="vote.user.constituentCount > 0">
+	                        	Yes for <a ng-show="vote.user.constituentCount > 0" href="member/{{vote.user.username}}/constituents">{{vote.user.constituentCount}} constituent<span ng-show="vote.user.constituentCount!=1">s</span></a>
+	                        </p>
+	                        <p>{{vote.user.state}}</p>
+	                    </div>
+	                    <div class="social">
+	                        <a ng-show="vote.user.socialAccounts.facebook.profileUrl" href="{{vote.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook facebook-icon"></i></a>
+	                        <a ng-show="vote.user.socialAccounts.twitter.profileUrl" href="{{vote.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter twitter-icon"></i></a>
+	                        <a ng-show="vote.user.socialAccounts.google.profileUrl" href="{{vote.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google google-icon"></i></a>
+	                    </div>
+	                </div>
+	            </div>
 		    </uib-tab>
-			<uib-tab heading="Related" ng-show="bill.relatedBills > 0">
-				<div ng-repeat="bill in bill.relatedBills">
-					<p><a href="bill/{{bill.urlTitle}}">{{bill.title}}</a></p>
-				</div>
+		    <uib-tab heading="{{vote.minusCount}}  No">
+		    	<div class="spacing-10"></div>
+				<div class="col-lg-4 col-sm-6" ng-repeat="vote in noVotes">
+	                <div class="member-card">
+	                    <div class="image" style="background-image: url('{{vote.user.coverUrl}}')">
+	                        <img ng-src="{{vote.user.avatarUrl}}" err-src="/images/avatar.png">
+	                    </div>
+	                    <div class="info">
+	                        <h4 class="name"><a href="member/{{vote.user.username}}">{{vote.user.username}}</a></h4>
+	                        <h5 class="position">{{vote.user.title}}</h5>
+	                        <p ng-show="vote.user.constituentCount > 0">
+	                        	No for <a href="member/{{vote.user.username}}/constituents">{{vote.user.constituentCount}} constituent<span ng-show="vote.user.constituentCount!=1">s</span></a>
+	                        </p>
+	                        <p>{{vote.user.state}}</p>
+	                    </div>
+	                    <div class="social">
+	                        <a ng-show="vote.user.socialAccounts.facebook.profileUrl" href="{{vote.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook facebook-icon"></i></a>
+	                        <a ng-show="vote.user.socialAccounts.twitter.profileUrl" href="{{vote.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter twitter-icon"></i></a>
+	                        <a ng-show="vote.user.socialAccounts.google.profileUrl" href="{{vote.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google google-icon"></i></a>
+	                    </div>
+	                </div>
+	            </div>
 		    </uib-tab>
 		</uib-tabset>
-	</div>
-	<div class="spacing-15"></div>
+	<div>
 </div>
 <div ng-include="'footer/index.tpl.html'"></div>
