--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -96,8 +96,10 @@
         <script src="/src/app/post/index.js"></script>
         <script src="/src/app/register/index.js"></script>
         <script src="/src/app/search/index.js"></script>
+        <script src="/src/app/vote copy/index.js"></script>
         <script src="/src/app/vote/index.js"></script>
         <script src="/src/app/votes/index.js"></script>
+        <script src="/src/app/votevote/index.js"></script>
         <script src="/src/common/models/bill.js"></script>
         <script src="/src/common/models/billVote.js"></script>
         <script src="/src/common/models/committee.js"></script>
