--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -24,16 +24,9 @@
 							<div class="pull-right">
 								<span style="color:grey" am-time-ago="result.updatedAt"></span>
 							</div>
-
+							<div class="spacing-5"></div>
+							<a href="/bill/{{result.bill.id}}/{{result.bill.title}}"><i class="fa fa-file-text-o"></i> {{result.bill.title}}</a>
 							<div class="spacing-10"></div>
-							<a href="/bill/{{result.bill.id}}/{{result.bill.title}}">{{result.bill.title}}</a>
-							<div class="spacing-10"></div>
-							<!--<button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, result)">
-								<i class="fa fa-caret-up vBlue"></i> <b>{{result.plusCount}}</b>
-							</button>
-							<button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, result)">
-								<i class="fa fa-caret-down red-color"></i>  <b>{{result.minusCount}}</b>
-							</button>-->
 						</div>
 
 				        <div ng-show="result.model=='post'" class="card-container">
@@ -65,19 +58,23 @@
 		                        </div>
 		                        <p>{{result.post}}</p>
 		                    </div>
-
-		                    <div class="post-action-container">
-		                        <div class="pull-left">
-		                            <a href="#" ng-click="createReaction(result, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
-		                            <a href="#" ng-click="createReaction(result, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
-		                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
-		                        </div>
-		                        <div class="pull-right">
-		                            <a href="post/{{result.id}}"><i class="fa fa-link grey"></i></a>
-		                        </div>
-		                    </div>
-
 						</div>
+						<div ng-show="result.model=='post'" style="padding: 8px 16px 8px;background-color: #f9f9f9">
+		                    <a style="padding:5px" href="#" ng-click="createReaction(result, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
+		                    <a style="padding:5px" href="#" ng-click="createReaction(result, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
+		                    <a style="padding:5px" href="#" class="grey" ng-click="reply(result)"><i class="fa fa-comment-o"></i> comment </a>
+		                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
+		                    <a style="" class="pull-right" href="post/{{result.id}}"><i class="fa fa-link grey"></i></a>
+		                </div>
+		                <div style="background-color: #f9f9f9;padding: 8px 16px 16px;" ng-show="post.showReply">
+		                    <form role="form">
+		                        <md-input-container class="md-block">
+		                            <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+		                        </md-input-container>
+		                        <button style="width:100%" ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+		                    </form>
+		                </div>
+
 					</md-card>
 
     			</uib-tab>
@@ -134,37 +131,43 @@
 			                        </div>
 			                        <p>{{post.post}}</p>
 			                    </div>
-
-			                    <div class="post-action-container">
-			                        <div class="pull-left">
-			                            <a href="#" ng-click="createReaction(result, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
-			                            <a href="#" ng-click="createReaction(result, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
-			                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
-			                        </div>
-			                        <div class="pull-right">
-			                            <a href="post/{{result.id}}"><i class="fa fa-link grey"></i></a>
-			                        </div>
-			                    </div>
 							</div>
+							<div class="" style="padding: 8px 16px 8px;background-color: #f9f9f9">
+			                    <a style="padding:5px" href="#" ng-click="createReaction(post, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
+			                    <a style="padding:5px" href="#" ng-click="createReaction(post, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
+			                    <a style="padding:5px" href="#" class="grey" ng-click="reply(post)"><i class="fa fa-comment-o"></i> comment </a>
+			                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
+			                    <a style="" class="pull-right" href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+			                </div>
+			                <div style="background-color: #f9f9f9;padding: 8px 16px 16px;" ng-show="post.showReply">
+			                    <form role="form">
+			                        <md-input-container class="md-block">
+			                            <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+			                        </md-input-container>
+			                        <button style="width:100%" ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+			                    </form>
+			                </div>
 						</md-card>
 
 						<md-card ng-show="result.model=='bill'">
 							<div class="card-container">
 				            	<h4><a href="/bill/{{bill._id}}/{{bill.title.replace(' ','-')}}">{{result.title}}</a></h4>
-
-				            	<div class="post-action-container">
-			                        <div class="pull-left">
-			                            <a href="#" ng-click="createReaction(result, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
-			                            <a href="#" ng-click="createReaction(result, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
-			                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
-			                        </div>
-			                    </div>
-
-
-								<!--<div class="spacing-10"></div>
-				            	<button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{result.plusCount}}</button>
-					            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{result.minusCount}}</button>-->
 					        </div>
+					        <div class="" style="padding: 8px 16px 8px;background-color: #f9f9f9">
+			                    <a style="padding:5px" href="#" ng-click="createReaction(result, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
+			                    <a style="padding:5px" href="#" ng-click="createReaction(result, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
+			                    <a style="padding:5px" href="#" class="grey" ng-click="reply(result)"><i class="fa fa-comment-o"></i> comment </a>
+			                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
+			                    <a style="" class="pull-right" href="post/{{result.id}}"><i class="fa fa-link grey"></i></a>
+			                </div>
+			                <div style="background-color: #f9f9f9;padding: 8px 16px 16px;" ng-show="post.showReply">
+			                    <form role="form">
+			                        <md-input-container class="md-block">
+			                            <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+			                        </md-input-container>
+			                        <button style="width:100%" ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+			                    </form>
+			                </div>
 						</md-card>
 
 						<md-card ng-show="result.model=='committee'">
@@ -201,19 +204,22 @@
 			    	<md-card ng-repeat="bill in bills">
 						<div class="card-container">
 			            	<h4><a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a></h4>
-
-							<div class="post-action-container">
-		                        <div class="pull-left">
-		                            <a href="#" ng-click="createReaction(bill, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{result.plusCount}} like </a> 
-		                            <a href="#" ng-click="createReaction(bill, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{result.minusCount}} dislike </a> 
-		                            <a href="#" class="grey" ng-click="reply(result)"><i class="fa fa-reply"></i> reply </a>
-		                        </div>
-		                    </div>
-
-							<!--<div class="spacing-10"></div>
-			            	<button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
-				            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote col-sm-6" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>-->
 				        </div>
+				        <div class="" style="padding: 8px 16px 8px;background-color: #f9f9f9">
+		                    <a style="padding:5px" href="#" ng-click="createReaction(post, 'like')" class="grey"><i class="fa fa-angle-up"></i> {{post.plusCount}} like </a> 
+		                    <a style="padding:5px" href="#" ng-click="createReaction(post, 'dislike')" class="grey"><i class="fa fa-angle-down"></i> {{post.minusCount}} dislike </a> 
+		                    <a style="padding:5px" href="#" class="grey" ng-click="reply(post)"><i class="fa fa-comment-o"></i> comment </a>
+		                    <a style="padding:5px" href="#" class="grey"><i class="fa fa-share"></i> share </a>
+		                    <a style="" class="pull-right" href="post/{{post.id}}"><i class="fa fa-link grey"></i></a>
+		                </div>
+		                <div style="background-color: #f9f9f9;padding: 8px 16px 16px;" ng-show="post.showReply">
+		                    <form role="form">
+		                        <md-input-container class="md-block">
+		                            <textarea ng-model="post.newPost.post" rows="5" md-select-on-focus aria-label="new post" placeholder=""></textarea>
+		                        </md-input-container>
+		                        <button style="width:100%" ng-click="createPost(post)" type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Submit</button>
+		                    </form>
+		                </div>
 			        </md-card>
     			</uib-tab>
 				<uib-tab heading="Committees">
@@ -267,8 +273,7 @@
 					<md-card ng-repeat="vote in votes">
 				        <div style="padding:16px 16px 16px">
 							<h4><a href="/vote/{{vote.id}}">{{vote.title}}</a></h4>
-							<div class="spacing-10"></div>
-							<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+							<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}"><i class="fa fa-file-text-o"></i>{{vote.bill.title}}</a>
 							<div class="spacing-10"></div>
 							<button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote col-sm-6" ng-click="createVote(1, vote)">
 								<i class="fa fa-caret-up vBlue"></i> <b>{{vote.plusCount}}</b>
@@ -421,6 +426,6 @@
 	<div ng-click="loadMore()" class="container" style="text-align:center">
 	    <button style="width:100%" class="btn btn-default">MORE <i class="fa fa-angle-down"></i></button>
 	</div>
-	<div class="spacing-25"></div>
+	<div class="spacing-50"></div>
 	<div ng-include="'footer/index.tpl.html'"></div>
 </div>
